@startuml
class TouchscreenController {
    + SwitchScreen(screen:string) : void
}
enum Screens {
    Login,
    MainMenu,
    Print,
    Error,
}
MonoBehaviour <|-- TouchscreenController
TouchscreenController --> "loginScreen" GameObject
TouchscreenController --> "mainMenuScreen" GameObject
TouchscreenController --> "printScreen" GameObject
TouchscreenController --> "errorScreen" GameObject
TouchscreenController +-- Screens
@enduml
